--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-sm-auto">
                                 <div class="form-check">
-                                    l <input class="form-check-input" type="checkbox">
+                                    <input class="form-check-input" type="checkbox">
                                     <label class="form-check-label"> Remember me
                                     </label>
                                 </div>
@@ -251,6 +251,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -430,6 +438,19 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <!-- Bootstrap jQuery -->
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 2000 });
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });
+    </script>
     <!-- <Script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
