--- a/index.html
+++ b/index.html
@@ -371,33 +371,8 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Bootstrap jQuery -->
-    <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 });
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
-                }
-            });
-        });
-
-        const toggleReserveModal = () => {
-            $('#reserveModal').modal('toggle')
-        }
-
-        const toggleLogInModal = () => {
-            $('#loginModal').modal('toggle')
-        }
-    </script>
+    <script src="js/scripts.js"></script>
+ 
     <!-- <Script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
