--- a/aboutus.html
+++ b/aboutus.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
+
+    <title>Ristorante Con Fusion: About Us</title>
+
+    <!-- build:css css/main.css -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
-
-    <title>Ristorante Con Fusion: About Us</title>
-
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -299,10 +303,13 @@
             </div>
         </div>
     </footer>
+
+     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts"></script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 
 
 </body>
